split up some scripts